feat: auth cache and admin api refactor
